tests/neg/operators/test-00.ts
/*@ main :: () => { void | true } */ 
function main(){
  let x = 0;
  let y = x - 1;
  assert (0 < y);
}
